Changes for 1.7.4

 - [ZBX-1410] fixed user profile update (Aly)
 - [ZBX-1371] shrinked API get results (Aly)
 - [ZBX-1411] fixed group and host selection in status of triggers (Aly)
 - [ZBX-1391] fixes for map permission checks (Aly)
 - [ZBX-1412] fixed graphs in web scenarios (Aly)
 - [ZBX-790] added protection of using special characters in user parameters of Zabbix Agent (Sasha)
 - [ZBX-1375] fixed graphs losing link with template after update (Vedmak)
 - [ZBX-137] added patch for Oracle (Alexei)
 - [ZBX-1372] applied patches for localization (Aly)
 - [ZBX-1378] allowed using months in age view (Aly)
 - [ZBX-1301] fixed discovery hosts view in dashboard (Aly)
 - [ZBX-1370] fixes in items copy (Aly)
 - [ZBX-1398] fixed advanced icons selection (Aly)
 - [ZBX-1357] updated French translation. Thanks to alixen (Richlv)
 - [ZBX-1380] improved performance viewing inventory host (vedmak)
 - [ZBX-1334] improved performance of template edit form (vedmak)
 - [DEV-438] added support of suffixes (K,M,G) in configuration parameters (Sasha)
 - [DEV-369] item check "log.regexp" was renamed to "logrt" to specify "log rotation" (Dmitry)
 - [DEV-339] added more internal checks zabbix[wcache,*] and abbix[rcache,*] (Sasha)
 - [ZBX-1209] fixed new node not shown in the list after adding (Vedmak)
 - [ZBX-1221] fixed node adding mechanizm (Vedmak)
 - [ZBX-1400] changed none working time highlight color for default graph themes (Aly)
 - [ZBX-1404] fixed undefined variable in screens (Aly)
 - [ZBX-1324] replaced more user visible strings ZABBIX with Zabbix (Richlv)
 - [DEV-411] added configuration parameters for dbcache module (Sasha)
 - [ZBX-1090] fixes for returned values from API calls (Aly)
 - [ZBX-1356] fixed undefined errors on user group deletion (Aly)
 - [ZBX-1403] fixed discovery widget to show only discovery from selected node (Aly)
 - [ZBX-1397] make 'History' string in page header translatable, thanks to Alexey Pustovalov (Richlv)